@@ -297,6 +297,15 @@ class ProjectClient(base.BaseV1ClientCreateEntity):
             name=requests_utils.quote(name, safe=''))
         return self.connection.put_request(request_path, json_data=data)
 
+    def get_commit(self, name, commit):
+        """Retrieves a commit of a project."""
+
+        request_path = "{api_path}{name}/commits/{commit}".format(
+            api_path=self.api_path,
+            name=requests_utils.quote(name, safe=''),
+            commit=commit)
+        return self.connection.get_request(request_path)
+
 
 def get_client(connection):
     return ProjectClient(connection)
