@@ -96,6 +96,7 @@ gerritclient =
     project_branch_reflog_show=gerritclient.commands.project:ProjectBranchReflogShow
     project_branch_show=gerritclient.commands.project:ProjectBranchShow
     project_child_list=gerritclient.commands.project:ProjectChildList
+    project_commit_show=gerritclient.commands.project:ProjectCommitShow
     project_configuration_download=gerritclient.commands.project:ProjectConfigDownload
     project_configuration_set=gerritclient.commands.project:ProjectConfigSet
     project_create=gerritclient.commands.project:ProjectCreate
